chapter02/website-app/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website-container
          image: localhost:32000/website-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: website
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    # 流量限制
    nginx.ingress.kubernetes.io/limit-rpm: '6000' #单副本每分钟最大请求数
    nginx.ingress.kubernetes.io/limit-connections: '10' #每ip最大连接数
    # http重定向
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # url rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - dashboard.k8s.local
      secretName: tls-test-ingress
  rules:
    #使用域名访问
    - host: dashboard.k8s.local
      http:
        paths:
          - path: /site-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: site-service
                port:
                  number: 80
    #绑定vm ip
    - http:
        paths:
          - path: /site-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: site-service
                port:
                  number: 80
